add changw background color,add change in html

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ img {
     width: 480;
 }
 html {
-      background-color: #99ffff;
+      background-color: #85b3b3;
     }
 .intro {
       text-align: center;
